@@ -456,6 +456,10 @@ Version 2.2.0 - The "We only delayed it to release on our 4th birthday. And then
 		  preference files existed before trying to read them. Also
 		  removed an unnessesary warning for when known.met doesn't 
 		  exist.
+		* Added wrapper-class for wxThread, to allow us to safely
+		  terminate joinable threads without using Delete, a function
+		  that is only intended for use with detached threads.
+		* Fixed cancelled downloads being reported as succesful.
 
 	xor:
 		* Fix for crash on amuled when starting up kademlia.
